CMAKE_MINIMUM_REQUIRED(VERSION 3.11)

PROJECT(Torch)

SET(CMAKE_CXX_STANDARD 17)

SET(CMAKE_PREFIX_PATH $ENV{LIBTORCHSYS})
FIND_PACKAGE(Torch REQUIRED)
INCLUDE_DIRECTORIES(${TORCH_INCLUDE_DIRS})

SET(CMAKE_PREFIX_PATH $ENV{FMTSYS})
FIND_PACKAGE(fmt)

SET(CMAKE_PREFIX_PATH $ENV{OPENCVSYS})
FIND_PACKAGE(OpenCV REQUIRED)

# pytorch源代码库
#ADD_SUBDIRECTORY(pytorch-src)

# libtorch练习库
ADD_SUBDIRECTORY(cpp_tutorials)